hello-world-ingress_bk.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/configuration-snippet":"more_set_headers \"Referrer-Policy no-referrer\";\n","nginx.ingress.kubernetes.io/limit-req-zone":"$binary_remote_addr zone=req_zone_wl:1m rate=10r/s","nginx.ingress.kubernetes.io/rewrite-target":"/$2","nginx.ingress.kubernetes.io/server-snippet":"location = / {\n rewrite ^ https://uat-portal.genyus.ey.com/portal/login permanent;\n break;\n}\n","nginx.ingr [...]
      nginx.ingress.kubernetes.io/configuration-snippet: |
        more_set_headers "Referrer-Policy no-referrer";
      nginx.ingress.kubernetes.io/limit-req-zone: $binary_remote_addr zone=req_zone_wl:1m
        rate=10r/s
      nginx.ingress.kubernetes.io/rewrite-target: /$2
      nginx.ingress.kubernetes.io/server-snippet: |
        location = / {
         rewrite ^ https://uat-portal.genyus.ey.com/portal/login permanent;
         break;
        }
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
      nginx.ingress.kubernetes.io/use-regex: "true"
    creationTimestamp: "2024-05-14T17:02:12Z"
    generation: 21
    name: hello-world-ingress
    namespace: prod
    resourceVersion: "1572772"
    uid: b563a025-ee3e-41bf-ac21-98096cb82eff
  spec:
    ingressClassName: nginx
    rules:
    - http:
        paths:
        - backend:
            service:
              name: nginx-prod
              port:
                number: 80
          path: /([^/]*)(.*)
          pathType: Prefix
        - backend:
            service:
              name: aks-helloworld-one
              port:
                number: 80
          path: /hello-world-one(/|$)(.*)
          pathType: Prefix
        - backend:
            service:
              name: aks-helloworld-two
              port:
                number: 80
          path: /hello-world-two(/|$)(.*)
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 52.254.112.48
kind: List
metadata:
  resourceVersion: ""
